[metadata]
name = aiowc
version = 0.2.3
author = Vladislav Kochetkov
author_email = vakochetkov@gmail.com
description = Asynchronous Python wrapper for WooCommerce REST API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/vakochetkov/aiowc
home_page = https://github.com/vakochetkov/aiowc
project_urls =
    Bug Tracker = https://github.com/vakochetkov/aiowc/issues
    Documentation = https://github.com/vakochetkov/aiowc
    Source Code = https://github.com/vakochetkov/aiowc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    python 
    woocommerce 
    rest
    api
    async
    asyncio
    aiohttp
    wcapi

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp ~= 3.7.4.post0
